@@ -14,6 +14,7 @@
 * Ebanx: Add support for `order_number` field [ali-hassan] #4304
 * BlueSnap: Add support for  `idempotency_key` field [drkjc] #4305
 * Paymentez: Update `capture` method to verify by otp for pending transactions [ajawadmirza] #4267
+* BlueSnap: Update refund request and endpoint along with merchant transaction support [ajawadmirza] #4307
 
 == Version 1.125.0 (January 20, 2022)
 * Wompi: support gateway [therufs] #4173
